# QuantMuse

backend/: CMakeLists.txt
backend/Logger/: README.md
backend/Logger/src/: ConsoleLogPolicy.cpp  FileLogPolicy.cpp  Logger.cpp
backend/Logger/test/: Test_Output.cpp
backend/include/: data_loader.hpp
backend/include/Logger/: .gitignore  CMakeLists.txt
backend/include/Logger/include/Utils/: Logger.hpp
backend/include/Logger/include/Utils/Logger/: ConsoleLogPolicy.hpp  FileLogPolicy.hpp  LogPolicy.hpp  Logger.hpp
backend/src/: data_loader.cpp  main.cpp
